--- a/AsphericalSurface/AsphericalSurface/MainForm.resx
+++ b/AsphericalSurface/AsphericalSurface/MainForm.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>390, 17</value>
+  </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>390, 17</value>
+  </metadata>
   <metadata name="saveFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -127,7 +133,7 @@
   <data name="AboutAppPictureBox.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAVpJREFUSEvllM0uBEEURluMFfMQeALB0t8LSIiEIIIwZjLxDsTC0gJbsbL0u2Tl
+        DQAACw0B7QfALAAAAVpJREFUSEvllM0uBEEURluMFfMQeALB0t8LSIiEIIIwZjLxDsTC0gJbsbL0u2Tl
         yXxnbnViVN3parPjJCf5prqqp/v2rSr+DeNyQW7KrZAn5NDMyUf5IS9kJ0hmjGvMqU1DXssHOc2AA9eY
         cyPHGMiBiS/ysPcrD+a+yqw/4cnr3LzkQLJ2INSTV05B7T+DXQYSsHbeYho+WqrmS/Jejgbv5Ir8yZR8
         shhD271bjDiVsxZ7LMszixHco2mxH3qb9svhUq5ZjDiXPEAEG+jEosuMpP+v5AgDCY7ltsV+2KVtiy57
@@ -136,4 +142,7 @@
         lsY01AfrEMMAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>228, 17</value>
+  </metadata>
 </root>
